apps/net-system/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: net-system
  labels:
    app.kubernetes.io/name: pihole
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.241
  ports:
    - name: dns
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP 
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-http  
  namespace: net-system
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
