apps/net-system/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: net-system
spec:
  rules:
  - host: pihole.4546b
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-http
            port:
              name: http
